--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="pages/home.html" frameborder="0" name="tela" id="tela">
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela" class="social"><img src="images/logo-home.jpg" alt="logo-home"></a>
+            <a href="#" target="tela" class="social"><img src="images/logo-facebook.jpg" alt="logo-facebook"></a>
+            <a href="#" target="tela" class="social"><img src="images/logo-github.jpg" alt="logo-github"></a>
+            <a href="#" target="tela" class="social"><img src="images/logo-instagram.jpg" alt="logo-instagram"></a>
+            <a href="#" target="tela" class="social"><img src="images/logo-twitter.jpg" alt="logo-twitter"></a>
+            <a href="#" target="tela" class="social"><img src="images/logo-youtube.jpg" alt="logo-youtube"></a>
         </section>
     </main>
 </body>
