--- a/index.html
+++ b/index.html
@@ -15,12 +15,24 @@
             </iframe>
         </section>
         <section id="redes-sociais">
-            <a href="pages/home.html" target="tela" class="social"><img src="images/logo-home.jpg" alt="logo-home"></a>
-            <a href="#" target="tela" class="social"><img src="images/logo-youtube.jpg" alt="logo-youtube"></a>
-            <a href="#" target="tela" class="social"><img src="images/logo-github.jpg" alt="logo-github"></a>
-            <a href="#" target="tela" class="social"><img src="images/logo-instagram.jpg" alt="logo-instagram"></a>
-            <a href="#" target="tela" class="social"><img src="images/logo-twitter.jpg" alt="logo-twitter"></a>
-            <a href="pages/facebook.html" target="tela" class="social"><img src="images/logo-facebook.jpg" alt="logo-facebook"></a>
+            <a href="pages/home.html" target="tela" class="social">
+                <img src="images/logo-home.jpg" alt="logo-home">
+            </a>
+            <a href="pages/youtube.html" target="tela" class="social">
+                <img src="images/logo-youtube.jpg" alt="logo-youtube">
+            </a>
+            <a href="pages/github.html" target="tela" class="social">
+                <img src="images/logo-github.jpg" alt="logo-github">
+            </a>
+            <a href="pages/instagram.html" target="tela" class="social">
+                <img src="images/logo-instagram.jpg" alt="logo-instagram">
+            </a>
+            <a href="pages/twitter.html" target="tela" class="social">
+                <img src="images/logo-twitter.jpg" alt="logo-twitter">
+            </a>
+            <a href="pages/facebook.html" target="tela" class="social">
+                <img src="images/logo-facebook.jpg" alt="logo-facebook">
+            </a>
         </section>
     </main>
 </body>
