--- a/pages/twitter.html
+++ b/pages/twitter.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facebook</title>
+    <title>Twitter</title>
     <link rel="stylesheet" href="../styles/social.css">
 </head>
 <body>
-    <img src="../images/tela-facebook.jpg" alt="tela-facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">ACESSE</a>
+    <img src="../images/tela-twitter.jpg" alt="tela-twitter">
+    <a href="https://twitter.com/guanabara" target="_blank">ACESSE</a>
 </body>
 </html>
