--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="shortcut icon" href="favicons/favicon.ico" type="image/x-icon" />
     <title>Projeto Redes Sociais</title>
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="shortcut icon" href="favicons/favicon.ico" type="image/x-icon">
-</head>
-<body>
+
+    <link rel="stylesheet" href="styles/index.css" />
+  </head>
+
+  <body>
     <main>
-        <section id="telefone">
-            <iframe src="pages/home.html" frameborder="0" name="tela" id="tela">
-                <p>Seu navegador não é compatível com isso.</p>
-            </iframe>
-        </section>
-        <section id="redes-sociais">
-            <a href="pages/home.html" target="tela" class="social">
-                <img src="images/logo-home.jpg" alt="logo-home">
-            </a>
-            <a href="pages/youtube.html" target="tela" class="social">
-                <img src="images/logo-youtube.jpg" alt="logo-youtube">
-            </a>
-            <a href="pages/github.html" target="tela" class="social">
-                <img src="images/logo-github.jpg" alt="logo-github">
-            </a>
-            <a href="pages/instagram.html" target="tela" class="social">
-                <img src="images/logo-instagram.jpg" alt="logo-instagram">
-            </a>
-            <a href="pages/twitter.html" target="tela" class="social">
-                <img src="images/logo-twitter.jpg" alt="logo-twitter">
-            </a>
-            <a href="pages/facebook.html" target="tela" class="social">
-                <img src="images/logo-facebook.jpg" alt="logo-facebook">
-            </a>
-        </section>
+      <section id="telefone">
+        <iframe src="pages/home.html" frameborder="0" name="tela" id="tela">
+          <p>Seu navegador não é compatível com isso.</p>
+        </iframe>
+      </section>
+
+      <section id="redes-sociais">
+        <a href="pages/home.html" target="tela" class="social">
+          <img src="images/logos/logo-home.jpg" alt="logo-home" />
+        </a>
+        <a href="pages/youtube.html" target="tela" class="social">
+          <img src="images/logos/logo-youtube.jpg" alt="logo-youtube" />
+        </a>
+        <a href="pages/github.html" target="tela" class="social">
+          <img src="images/logos/logo-github.jpg" alt="logo-github" />
+        </a>
+        <a href="pages/instagram.html" target="tela" class="social">
+          <img src="images/logos/logo-instagram.jpg" alt="logo-instagram" />
+        </a>
+        <a href="pages/twitter.html" target="tela" class="social">
+          <img src="images/logos/logo-twitter.jpg" alt="logo-twitter" />
+        </a>
+        <a href="pages/facebook.html" target="tela" class="social">
+          <img src="images/logos/logo-facebook.jpg" alt="logo-facebook" />
+        </a>
+      </section>
     </main>
-</body>
+  </body>
 </html>
