--- a/pages/facebook.html
+++ b/pages/facebook.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Facebook</title>
-    <link rel="stylesheet" href="../styles/social.css">
-</head>
-<body>
-    <img src="../images/tela-facebook.jpg" alt="tela-facebook">
-    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">ACESSE</a>
-</body>
+    <link rel="stylesheet" href="../styles/social.css" />
+  </head>
+  <body>
+    <img src="../images/telas/tela-facebook.jpg" alt="tela-facebook" />
+    <a
+      href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR"
+      target="_blank"
+      >ACESSE</a
+    >
+  </body>
 </html>
